infrastructure/controllers/networking/smtp-relay/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: smtp-relay
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: smtp-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
